--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <head></head>
     <body>
+        Just one more testing page...
         <script>
             top.postMessage(
                 JSON.stringify("open('https://facebook.com');alert('Payload');"),
